--- a/firebase.html
+++ b/firebase.html
@@ -178,25 +178,27 @@
 
     <script type="module">
         // Importar las funciones necesarias desde los SDK que necesitas
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js";
-        import { getDatabase, ref, push, onValue, update, remove } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-database.js";
+        
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
 
-        // Tu configuración de Firebase
-        const firebaseConfig = {
-            apiKey: "your-api-key",
-            authDomain: "pruebasep-97ecc.firebaseapp.com",
-            databaseURL: "https://pruebasep-97ecc-default-rtdb.firebaseio.com/",
-            projectId: "pruebasep-97ecc",
-            storageBucket: "pruebasep-97ecc.appspot.com",
-            messagingSenderId: "374094584102",
-            appId: "1:374094584102:web:a26de0b0aba01b94de89e7",
-            measurementId: "G-L7005Z6GJ9"
-        };
+  // Your web app's Firebase configuration
+  const firebaseConfig = {
+    apiKey: "AIzaSyBMJsVpnbOwVOiVNbTZScZdet9qlGigDL0",
+    authDomain: "conexion-8ec0d.firebaseapp.com",
+    databaseURL: "https://conexion-8ec0d-default-rtdb.firebaseio.com",
+    projectId: "conexion-8ec0d",
+    storageBucket: "conexion-8ec0d.appspot.com",
+    messagingSenderId: "679910299749",
+    appId: "1:679910299749:web:9800b464879628b4850e8c"
+  };
 
-        // Inicializar Firebase
-        const app = initializeApp(firebaseConfig);
-        const database = getDatabase(app);
-        let doctorIdToEdit = null;
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+    const database = getDatabase(app);
+    let doctorIdToEdit = null;
 
 // Función para validar que la cadena contenga solo letras
 function contieneSoloLetras(cadena) {
