--- a/firebase.html
+++ b/firebase.html
@@ -159,7 +159,7 @@
         <label for="correo">Correo Electrónico:</label>
         <input type="email" id="correo" name="correo">
 
-        <button type="button" onclick="crearDoctor()">Guardar</button>
+        <button type="button" onclick="crearDoctor()">Registrar</button>
     </form>
 
     <!-- Lista de Doctores en una tabla -->
@@ -255,7 +255,7 @@ function contieneSoloNumeros(cadena) {
 
             if (doctorIdToEdit) {
                 // Actualizar doctor existente
-                update(ref(database, `doctores/${doctorIdToEdit}`), {
+                update(ref(database, `NaimCedeno/${doctorIdToEdit}`), {
                     nombre: nombre,
                     especialidad: especialidad,
                     direccion: direccion,
@@ -267,7 +267,7 @@ function contieneSoloNumeros(cadena) {
                 document.querySelector("button").innerText = "Registrar";
             } else {
                 // Crear un nuevo doctor
-                push(ref(database, 'doctores'), {
+                push(ref(database, 'NaimCedeno'), {
                     nombre: nombre,
                     especialidad: especialidad,
                     direccion: direccion,
@@ -285,7 +285,7 @@ function contieneSoloNumeros(cadena) {
         // Función para llenar los campos del formulario al editar un doctor
         window.editarDoctor = function (id) {
             doctorIdToEdit = id;
-            const databaseRef = ref(database, `doctores/${id}`);
+            const databaseRef = ref(database, `NaimCedeno/${id}`);
             onValue(databaseRef, (snapshot) => {
                 const doctor = snapshot.val();
                 if (doctor) {
@@ -325,7 +325,7 @@ function contieneSoloNumeros(cadena) {
             const bodyTablaDoctores = document.getElementById("bodyTablaDoctores");
             bodyTablaDoctores.innerHTML = "";
 
-            const databaseRef = ref(database, 'doctores');
+            const databaseRef = ref(database, 'NaimCedeno');
             onValue(databaseRef, (snapshot) => {
                 const data = snapshot.val();
                 if (data) {
