--- a/firebase.html
+++ b/firebase.html
@@ -35,7 +35,7 @@
         label {
             display: block;
             margin-bottom: 10px;
-            color: #0a5796;
+            color: #15016d;
         }
 
         input {
