--- a/firebase.html
+++ b/firebase.html
@@ -217,7 +217,7 @@
 
             // Verificar si los campos obligatorios están llenos
             if (!nombre || !especialidad) {
-                alert("Por favor, complete los campos obligatorios: Nombre y Especialidad");
+                alert("Por favor, complete los campos obligatorios");
                 return;
             }
 
