--- a/firebase.html
+++ b/firebase.html
@@ -16,7 +16,7 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            height: 100vh;
+            min-height: 100vh;
         }
 
         h1 {
@@ -28,8 +28,10 @@
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-            width: 300px;
+            width: 80%; /* Cambiado el ancho del formulario */
+            max-width: 400px;
             margin-bottom: 20px;
+            box-sizing: border-box;
         }
 
         label {
@@ -58,88 +60,21 @@
             transition: background-color 0.3s ease;
         }
 
-        button.registrar {
-            background-color: #003558;
-        }
+        /* Resto de tus estilos CSS... */
 
-        button:hover {
-            background-color: #45a049;
-        }
-
-        /* Estilo específico para botón Editar */
-        button.editar {
-            background-color: #3498db;
-        }
-
-        /* Estilo específico para botón Eliminar */
-        button.eliminar {
-            /* Puedes quitar o ajustar este estilo según tus preferencias */
-            background-color: #e74c3c;
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
-        }
-
-        th, td {
-            border: 1px solid #ddd;
-            padding: 12px;
-            text-align: left;
-        }
-
-        th {
-            background-color: #000000;
-            color: white;
-        }
-
-        ul {
-            list-style-type: none;
-            padding: 0;
-            margin: 0;
-        }
-
-        li {
-            background-color: #ffffff;
-            padding: 20px;
-            margin-bottom: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-            display: flex;
-            flex-direction: column;
-        }
-
-        li strong {
-            font-size: 20px;
-            margin-bottom: 12px;
-        }
-
-        li p {
-            margin: 0;
-            color: #555;
-        }
-
-        /* Estilo específico para botón Eliminar en lista de doctores */
-        li button.eliminar {
-            background-color: #e74c3c;
-            color: white;
-            padding: 8px 12px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-
-        /* Estilo específico para botón Eliminar en lista de doctores al pasar el ratón */
-        li button.eliminar:hover {
-            background-color: #c9302c;
+        @media only screen and (max-width: 600px) {
+            /* Estilos específicos para pantallas pequeñas aquí... */
+            form {
+                width: 90%; /* Ancho del formulario al 90% en pantallas pequeñas */
+            }
+            table {
+                width: 90%; /* Ancho de la tabla al 90% en pantallas pequeñas */
+            }
         }
     </style>
 </head>
 
 <body>
-
     <h1>Registro de Doctor</h1>
 
     <!-- Formulario de Registro -->
@@ -344,7 +279,6 @@
         // Cargar la lista inicial de doctores
         actualizarListaDoctores();
     </script>
-
 </body>
 
 </html>
