--- a/firebase.html
+++ b/firebase.html
@@ -47,7 +47,22 @@
             border: 1px solid #ccc;
             border-radius: 4px;
         }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
 
+        th, td {
+            border: 1px solid #ddd;
+            padding: 12px;
+            text-align: left;
+        }
+
+        th {
+            background-color: #000000;
+            color: white;
+        }
         button {
             background-color: #4caf50;
             color: white;
