--- a/firebase.html
+++ b/firebase.html
@@ -87,7 +87,7 @@
 </head>
 
 <body>
-    <h1>Registro de Doctor</h1>
+    <h1>Registro de Doctor1</h1>
 
     <!-- Formulario de Registro -->
     <form id="doctorForm">
