--- a/firebase.html
+++ b/firebase.html
@@ -92,7 +92,7 @@
 </head>
 
 <body>
-    <h1>Registro de Doctor11</h1>
+    <h1>Registro de Doctor</h1>
 
     <!-- Formulario de Registro -->
     <form id="doctorForm">
