--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
     </style>
 </head>
 <body>
-    <a href="firebase.html">Hola</a>
+    <a href="firebase.html">Registro</a>
+    <header>
+    <a href="fire2.html">res</a>
     <header>
         <h1>Mi Página HTML</h1>
     </header>
